:lipstick: Fix footer spacings

--- a/src/css/footer.sass
+++ b/src/css/footer.sass
@@ -5,15 +5,19 @@ footer
 
   .inner
     display: flex
+    align-items: center
 
     box-sizing: content-box
     height: 4em
     margin: auto
     max-width: $site-width
-    padding: 0 64px
-
-  .right
-    margin-left: auto
+    padding: 1.5em 3em
 
   a
     text-decoration: underline
+
+  p
+    margin: 0
+
+    &.right
+      margin-left: auto
